--- a/Book/BookReading/Views/ShellView.xaml
+++ b/Book/BookReading/Views/ShellView.xaml
@@ -21,7 +21,7 @@
                     <Button Content="设置"/>
                 </ToolBar>
             </ToolBarTray>-->
-            <Border DockPanel.Dock="Left" BorderThickness="1" BorderBrush="Black" Width="150" Margin="5">
+            <Border DockPanel.Dock="Left" BorderThickness="1" BorderBrush="Black" Width="250" Margin="5">
                 <TreeView ItemsSource="{Binding Path=ShlefData}"
                           MouseDoubleClick="{s:Action Method=Shelf_DoubleClick}">
                     <TreeView.ContextMenu>
@@ -56,7 +56,7 @@
                 </TreeView>
             </Border>
             <DockPanel Margin="5">
-                <Border DockPanel.Dock="Top" BorderBrush="Transparent" BorderThickness="1">
+                <Border DockPanel.Dock="Top" BorderBrush="#ffffff" BorderThickness="1">
                     <DockPanel>
                         <Button DockPanel.Dock="Right" Content="搜索" Margin="5,0,0,0" Command="{s:Action Method=ShowSearchView}"/>
                         <TextBox KeyDown="{s:Action Method=Keyword_Inputbox_Keydown}" Text="{Binding Path=Keyword,UpdateSourceTrigger=PropertyChanged}"/>
